<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.agv_kt.ui.script.ScriptViewModel" />
        <variable
            name="cmd"
            type="com.example.agv_kt.utils.cmd.FootageCommand" />
        <variable
            name="paramOperation"
            type="com.example.agv_kt.ui.script.adapter.ParamListOperation" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutScriptButtonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layoutScriptButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TURN_LEFT_90_DEGREES" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TURN_LEFT_180_DEGREES" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutScriptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recyclerScriptList"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/layoutScriptButtonLeft"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.addParam(cmd.TURN_RIGHT_90_DEGREES)}"
                android:text="@string/TURN_RIGHT_90_DEGREES" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TURN_RIGHT_180_DEGREES" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerScriptList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/layoutScriptButton"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/lineScriptUponButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <Button
            android:id="@+id/btnScriptCancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/btnScriptStart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/lineScriptUponButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnScriptStart"
            android:text="@string/execute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="@id/lineScriptUponButton"
            app:layout_constraintStart_toEndOf="@+id/btnScriptCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout></layout>